Move DjangoBench source code to packages/django_workload/srcs, deprecate the patching approach (#244)
Summary:
Pull Request resolved: https://github.com/facebookresearch/DCPerf/pull/244

This diff deprecates the git clone and patch approach when installing DjangoBench; instead we copy the full DjangoBench source code to DCPerf's packages/django_workload/srcs folder. This will ensure easier code maintenance and development.

Differential Revision: D83792235